nexus/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-svc
  namespace: nexus
spec:
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  - port: 5080
    targetPort: 5080
    protocol: TCP
    name: docker
  selector:
    app: nexus-server
