nexus/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ui
  namespace: nexus
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    #nginx.org/client-max-body-size: "1500m"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  #ingressClassName: nginx
  rules:
    - host: nexus-k8s.ozalliance.by
      http:
        paths:
          - backend:
              service:
                name: nexus-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: docker.ozalliance.by
      http:
        paths:
          - backend:
              service:
                name: nexus-svc
                port:
                  number: 5080
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - nexus-k8s.ozalliance.by
      - docker.ozalliance.by
      secretName: ozalliance-secret
